[tool.poetry]
name = "drf-auto-query"
version = "0.1b0"
description = ""
authors = ["Jakob <jakobverlic66@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_auto_query"}]

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=2.2"
djangorestframework = ">=3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
factory-boy = "^3.2.1"
wheel = "^0.40.0"
setuptools = "^67.8.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
